--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -10,23 +10,23 @@
                 <tr>
                     <th class="header">プロフィール画像</th>
                     <td class="data">
-                        {% if user_data.image %}
-                            <img src="{{ user_data.image.url }}" alt="" width="100px">
-                        {% endif %}
+                      {% if user_data.image %}
+                      <img src="{{ user_data.image.url }}" width="100px" />
+                      {% endif %}
                     </td>
-                </tr>
-                <tr>
+                  </tr>
+                  <tr>
                     <th class="header">名前</th>
                     <td class="data">{{ user_data.first_name }} {{ user_data.last_name }}</td>
-                </tr>
-                <tr>
+                  </tr>
+                  <tr>
                     <th class="header">メールアドレス</th>
                     <td class="data">{{ user_data.email }}</td>
-                </tr>
-                <tr>
+                  </tr>
+                  <tr>
                     <th class="header">自己紹介</th>
                     <td class="data">{{ user_data.description }}</td>
-                </tr>
+                  </tr>
             </tbody>
         </table>
         <div class="button mx-auto">
