--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -2,54 +2,58 @@
 
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+    />
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     <title>予約サイト</title>
-</head>
-<body>
+  </head>
+
+  <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a href="/" class="navbar-brand">予約サイト</a>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a href="/" class="nav-link">ホーム</a>
-                </li>
-                {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <a href="{% url 'profile' %}" class="nav-link">プロフィール</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="{% url 'account_logout' %}" class="nav-link">ログアウト</a>
-                    </li>
-                {% else %}
-                    <li class="nav-item">
-                        <a href="{% url 'account_signup' %}" class="nav-link">スタッフ</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="{% url 'account_login' %}" class="nav-link">ログイン</a>
-                    </li>
-                {% endif %}
-            </ul>
-        </div>
+      <div class="container">
+        <a class="navbar-brand" href="/">予約サイト</a>
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/">ホーム</a>
+          </li>
+          {% if user.is_authenticated %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'profile' %}">プロフィール</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'account_logout' %}">ログアウト</a>
+          </li>
+          {% else %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'account_signup' %}">スタッフ</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'account_login' %}">ログイン</a>
+          </li>
+          {% endif %}
+        </ul>
+      </div>
     </nav>
 
     <main>
-        <div class="container">
-            {% block content %}
-            {% endblock %}
-        </div>
+      <div class="container">{% block content %} {% endblock %}</div>
     </main>
 
     <footer class="py-2 bg-dark">
-        <p class="m-0 text-center text-white">Copyright &copy; Consulart</p>
+      <p class="m-0 text-center text-white">
+        Copyright &copy; Consulart 2022
+      </p>
     </footer>
 
-    {% block extra_js %}
-    {% endblock %}
-    
-</body>
+    {% block extra_js %} {% endblock %}
+  </body>
 </html>
